@startuml
!theme toy
top to bottom direction

title Backend API Comercial - Camadas Controller e Service

' ======================================================
' ================ CONTROLLER LAYER ====================
' ======================================================
package "Controller Layer (API REST)" {

    package "Autenticação" {
        class AuthenticationController {
        - AuthenticationService authenticationService
        - AuthenticationManager authenticationManager
        + authenticate(UserAuthDTO userAuthDTO)
        + refresh(RequestRefreshTokenDTO refreshTokenDTO)
    }
    }

    package "Usuários" {
        class UsuarioApiController {
        - UsuarioApiService usuarioApiService
        + createUser(ApiUserRegisterDTO dto)
        + updateUser(ApiUserRegisterDTO dto)
        + getUserByUsername(String username)
        + getAllUsers()
        + deleteUserByUsername(String username)
    }
    }

    package "Clientes" {
        class ClienteController {
        - ClienteService clienteService
        + registerClient(ClientRegisterDTO clientRegisterDTO)
        + approveClient(ClientIdentification identificationNumber)
        + findClientsByNameAndStatus(String name, Boolean status)
        + findByIdentificationNumber(String identificationNumber)
        + updateClient(ClientRegisterDTO clientRegisterDTO)
        + deleteClient(String identificationNumber)
    }
    }

    package "Produtos & Itens" {
        class ItemController {
        - ItemService itemService
        + getAllProducts(int page, int quantidade)
        + getProductDetails(String code)
        + createProduct(ItemDTO dto)
        + addStock(ItemAddStockDTO dto)
        + deleteBatch(String batch)
        + searchByName(String name)
    }
    }

    package "Vendas" {
        class VendaController {
        - VendaService vendaService
        + createPurchase(PurchaseRequestDTO purchaseRequestDTO)
    }
    }
}


' ======================================================
' ================= SERVICE LAYER ======================
' ======================================================
package "Service Layer (Regras de Negócio)" {

    package "Autenticação & Segurança" {
        class AuthenticationService {
        - JwtService jwtService
        - RefreshTokenService refreshTokenService
        + authenticate(Authentication authentication)
        + refreshToken(String refreshToken)
    }

        class RefreshTokenService {
        - RefreshTokenRepository refreshTokenRepository
        - UsuarioBaseRepository usuarioBaseRepository
        - Integer refreshTokenExpiresInSeconds
        + validateTokenRenewal(String token)
        + createRefreshToken(String username)
    }

        class RoleService {
        - RoleRepository roleRepository
        + getRoleById(Long id)
    }

        class JwtService {
            + generateToken(Authentication): String
        }
    }

    package "Usuários" {
        class UsuarioApiService {
        - UsuarioApiRepository usuarioApiRepository
        - UsuarioBaseService usuarioBaseService
        + registerUser(ApiUserRegisterDTO dto)
        + updateUser(ApiUserRegisterDTO dto)
        + getUserByUsername(String username)
        + getAllUsers()
        + deleteUserByUsername(String username)
    }

        class UsuarioBaseService {
        - UsuarioBaseRepository usuarioBaseRepository
        - BCryptPasswordEncoder encoder
        - RoleService roleService
        + save(ApiUserRegisterDTO dto)
        + findByUsername(String username)
        + findByEmail(String email)
        + findByCPF(String cpf)
    }
    }

    package "Clientes" {
        class ClienteService {
        - ClienteRepository clienteRepository
        + requestRegistration(ClientRegisterDTO clientDTO)
        + approveClientRegistration(String identificationNumber)
        + findClientsByNameAndStatus(String name, Boolean active)
        + findByIdentificationNumber(String identificationNumber)
        + updateRegistration(ClientRegisterDTO clientDTO)
        + logicalDeleteClient(String identificationNumber)
    }
    }

    package "Produtos & Itens" {
        class ItemService {
        - ItemRepository itemRepository
        - ProdutoRepository produtoRepository
        + registerNewProduct(ItemDTO dto)
        + addStock(ItemAddStockDTO dto)
        + getAllProductsPaged(int page, int size)
        + getProductDetailsByCode(String code)
        + searchProductsByName(String name)
        + deleteBatch(String batchCode)
    }

        class ProdutoService {
        - ProdutoRepository produtoRepository
        + findByCode(String code)
        + save(Produto produto)
    }
    }

    package "Vendas" {
        class VendaService {
        - VendaRepository vendaRepository
        - UsuarioApiRepository usuarioApiRepository
        - UsuarioBaseService usuarioBaseService
        - ClienteService clienteService
        - ProdutoService produtoService
        - ProdutoRepository produtoRepository
        + createPurchase(PurchaseRequestDTO purchaseRequestDTO)
    }
    }
}


' ======================================================
' ================ RELACIONAMENTOS =====================
' ======================================================

' Controllers → Services
AuthenticationController --> AuthenticationService
ClienteController --> ClienteService
ItemController --> ItemService
UsuarioApiController --> UsuarioApiService
VendaController --> VendaService

@enduml
